--- a/web/index.html
+++ b/web/index.html
@@ -2,34 +2,124 @@
 <html>
 
 <head>
+  <!--
+    If you are serving your web app in a path other than the root, change the
+    href value below to reflect the base path you are serving from.
+
+    The path provided below has to start and end with a slash "/" in order for
+    it to work correctly.
+
+    For more details:
+    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+
+    This is a placeholder for base href that will be replaced by the value of
+    the `--base-href` argument provided to `flutter build`.
+  -->
+  <base href="$FLUTTER_BASE_HREF">
+
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Domandito">
 
-  <!-- Base href مهم جداً للـ Flutter Web routing -->
-  <base href="/">
-
   <meta name="google-signin-client_id"
     content="623808187900-gsa0ldhtii8mhgv55vbfqqdrc4vhjf6c.apps.googleusercontent.com">
 
+  <!-- Open Graph -->
+  <meta property="og:title" content="Domandito" />
+  <meta property="og:description" content="Ask anoynmously" />
+  <meta property="og:image" content="https://takeawayapp.ams3.digitaloceanspaces.com/play_store_512.png" />
+  <meta property="og:url" content="https://domandito-rbuqt.ondigitalocean.app/" />
+  <meta property="og:type" content="website" />
+   <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Domandito" />
+  <meta name="twitter:description" content="Ask anoynmously" />
+  <meta name="twitter:image" content="https://takeawayapp.ams3.digitaloceanspaces.com/play_store_512.png" />
+  <meta property="og:site_name" content="Domandito" />
+  <meta property="og:locale" content="ar_EG" />
+
+  <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="apple-mobile-web-app-title" content="Domandito">
   <meta name="theme-color" content="#dd324f">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+
+  <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.ico">
 
   <title>Domandito</title>
   <link rel="manifest" href="manifest.json">
 
+
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
 
-  <style id="splash-screen-style">
-    html { height: 100% }
-    body { margin: 0; min-height: 100%; background-color: #dd324f; background-size: 100% 100%; }
-    .center { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); }
-  </style>
 
+
+
+
+
+  <style id="splash-screen-style">
+    html {
+      height: 100%
+    }
+
+    body {
+      margin: 0;
+      min-height: 100%;
+      background-color: #dd324f;
+      background-size: 100% 100%;
+    }
+
+    .center {
+      margin: 0;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+    }
+
+    .contain {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+
+    .stretch {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
+
+    .cover {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .bottom {
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      -ms-transform: translate(-50%, 0);
+      transform: translate(-50%, 0);
+    }
+
+    .bottomLeft {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+    }
+
+    .bottomRight {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+    }
+  </style>
   <script id="splash-screen-script">
     function removeSplashFromWeb() {
       document.getElementById("splash")?.remove();
@@ -41,21 +131,22 @@
 
 <body>
   <picture id="splash">
+    <source
+      srcset="splash/img/light-1x.png 1x, splash/img/light-2x.png 2x, splash/img/light-3x.png 3x, splash/img/light-4x.png 4x"
+      media="(prefers-color-scheme: light)">
+    <source
+      srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x, splash/img/dark-4x.png 4x"
+      media="(prefers-color-scheme: dark)">
     <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
   </picture>
 
-  <!-- Redirect any unknown paths to index.html -->
-  <script>
-    // هذا الكود فقط للـ Web: أي رابط غير موجود يرجع index.html
-    (function() {
-      if (!location.pathname.startsWith('/#') && location.pathname !== '/') {
-        history.replaceState(null, '', '/');
-      }
-    })();
-  </script>
 
-  <!-- Flutter bootstrap -->
-  <script src="flutter_bootstrap.js" async></script>
+
+
+  <script src="flutter_bootstrap.js" async=""></script>
+  <!-- <script type="text/javascript" src="https://appleid.cdn-apple.com/appleauth/static/jsapi/appleid/1/en_US/appleid.auth.js"></script> -->
+
+
 </body>
 
 </html>
