--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
   -->
   <base href="$FLUTTER_BASE_HREF">
 
-  <!-- <script>
+  <script>
     // الحصول على المسار الحالي
     var currentPath = window.location.pathname;
 
@@ -26,7 +26,7 @@
       // قم بإعادة التوجيه إلى المسار مضافاً إليه هاش
       window.location.replace(window.location.origin + '/#' + currentPath);
     }
-  </script> -->
+  </script>
 
 
   <meta charset="UTF-8">
