back to work web version

--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
   -->
   <base href="$FLUTTER_BASE_HREF">
 
-  <script>
+  <!-- <script>
     // الحصول على المسار الحالي
     var currentPath = window.location.pathname;
 
@@ -26,7 +26,7 @@
       // قم بإعادة التوجيه إلى المسار مضافاً إليه هاش
       window.location.replace(window.location.origin + '/#' + currentPath);
     }
-  </script>
+  </script> -->
 
 
   <meta charset="UTF-8">
@@ -37,18 +37,18 @@
     content="623808187900-gsa0ldhtii8mhgv55vbfqqdrc4vhjf6c.apps.googleusercontent.com">
 
   <!-- Open Graph -->
-  <!-- <meta property="og:title" content="Domandito" />
-<meta property="og:description" content="Ask anoynmously" />
-<meta property="og:image" content="https://takeawayapp.ams3.digitaloceanspaces.com/play_store_512.png" />
-<meta property="og:url" content="domandito.com/" />
-<meta property="og:type" content="website" /> -->
+  <meta property="og:title" content="Domandito" />
+  <meta property="og:description" content="Ask anoynmously" />
+  <meta property="og:image" content="https://takeawayapp.ams3.digitaloceanspaces.com/play_store_512.png" />
+  <meta property="og:url" content="domandito.com/" />
+  <meta property="og:type" content="website" />
   <!-- Twitter -->
-  <!-- <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Domandito" />
-<meta name="twitter:description" content="Ask anoynmously" />
-<meta name="twitter:image" content="https://takeawayapp.ams3.digitaloceanspaces.com/play_store_512.png" />
-<meta property="og:site_name" content="Domandito" />
-<meta property="og:locale" content="ar_EG" /> -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Domandito" />
+  <meta name="twitter:description" content="Ask anoynmously" />
+  <meta name="twitter:image" content="https://takeawayapp.ams3.digitaloceanspaces.com/play_store_512.png" />
+  <meta property="og:site_name" content="Domandito" />
+  <meta property="og:locale" content="ar_EG" />
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
